# photo-discord-bot

./: .gitignore  Dockerfile  Justfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: black.yml  docker_deploy.yml  docker_test.yml  ruff.yml  tests.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
tests/: __init__.py  conftest.py
tests/integration/: test_discord_integration.py  test_drive_integration.py
tests/unit/: test_commands.py  test_downloads.py  test_drive.py  test_utils.py
