[project]
name = "photo-discord-bot"
version = "1.0.0"
description = "Discord bot to download images and videos from discord threads to upload to google drive"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.15",
    "aiosignal>=1.3.2",
    "attrs>=25.1.0",
    "cachetools>=5.5.0",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "discord-py>=2.5.2",
    "frozenlist>=1.5.0",
    "google-api-core>=2.24.1",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "googleapis-common-protos>=1.66.0",
    "httplib2>=0.22.0",
    "idna>=3.10",
    "multidict>=6.1.0",
    "oauthlib>=3.2.2",
    "pillow>=11.1.0",
    "propcache>=0.2.1",
    "proto-plus>=1.25.0",
    "protobuf>=5.29.1",
    "psutil>=7.0.0",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pycparser>=2.22",
    "pyheif>=0.8.0",
    "pyparsing>=3.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9",
    "ruff>=0.11.3",
    "sentry-sdk>=2.25.1",
    "uritemplate>=4.1.1",
    "urllib3>=2.2.3",
    "yarl>=1.18.3",
]
