[project]
name = "photo-discord-bot"
version = "1.0.0"
description = "Discord bot to download images and videos from discord threads to upload to google drive"
readme = "README.md"
requires-python = "~=3.12.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.7.1",
    "aiohttp>=3.14.1",
    "aiosignal>=1.3.2",
    "attrs>=25.1.0",
    "cachetools>=7.0.6",
    "certifi>=2026.6.17",
    "cffi>=2.1.0",
    "charset-normalizer>=3.4.9",
    "discord-py>=2.5.2",
    "frozenlist>=1.5.0",
    "google-api-core>=2.32.0",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "googleapis-common-protos>=1.74.0",
    "httplib2>=0.32.0",
    "idna>=3.18",
    "multidict>=6.1.0",
    "oauthlib>=3.2.2",
    "pillow>=12.3.0",
    "propcache>=0.2.1",
    "proto-plus>=1.28.1",
    "protobuf>=7.35.1",
    "psutil>=7.0.0",
    "pyasn1>=0.6.4",
    "pyasn1-modules>=0.4.1",
    "pycparser>=2.22",
    "pyheif>=0.8.0",
    "pyparsing>=3.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9",
    "ruff>=0.15.22",
    "sentry-sdk>=2.66.0",
    "uritemplate>=4.1.1",
    "urllib3>=2.7.0",
    "yarl>=1.18.3",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

